--- a/index.ipynb
+++ b/index.ipynb
@@ -187,8 +187,7 @@
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    return x_value**list_of_terms[1]\n",
-    "#list_of_terms[0]*x_value**list_of_terms[1]-11"
+    "    return list_of_terms[0]*x_value**list_of_terms[1]-11"
    ]
   },
   {
