--- a/index.ipynb
+++ b/index.ipynb
@@ -187,8 +187,11 @@
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
+    "    count = 0\n",
+    "    summation = 0\n",
     "    for term in list_of_terms:\n",
-    "        term_output(term, x_value)"
+    "        summation = term_output(term, x_value[count])\n",
+    "        count +=1"
    ]
   },
   {
