Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -187,12 +187,7 @@
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    count = 0\n",
-    "    summation = 0\n",
-    "    for term in list_of_terms:\n",
-    "        summation = summation + term_output(term, x_value[count])\n",
-    "        count +=1\n",
-    "    return summation"
+    "    term_output"
    ]
   },
   {
