--- a/index.ipynb
+++ b/index.ipynb
@@ -187,7 +187,8 @@
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    [term_output(list_of_terms[0], x_value ) + list_of_terms[1], x_v"
+    "    map(termou)\n",
+    "    term_output(list_of_terms[0], x_value) + term_output(list_of_terms[1], x_value)"
    ]
   },
   {
