--- a/index.ipynb
+++ b/index.ipynb
@@ -188,7 +188,7 @@
    "source": [
     "def output_at(list_of_terms, x_value):\n",
     "    return sum(list(map(term_output, list_of_terms, repeat(x_value))))\n",
-    "\n",
+    "    return sum(list(map(lambda ter,: term_output(x, x_value))))\n",
     "    #return term_output(list_of_terms[0], x_value) + term_output(list_of_terms[1], x_value)"
    ]
   },
