--- a/index.ipynb
+++ b/index.ipynb
@@ -2254,19 +2254,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "def delta_f(list_of_terms, x_value, delta_x):\n",
-    "    output_at(list_of_terms, x_value+delta_x) + output_at(list_of_terms, delta_x)"
+    "    return output_at(list_of_terms, x_value+delta_x) + output_at(list_of_terms, x_value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "delta_f(four_x_plus_fifteen, 2, 1) # 4"
    ]
